Made website more responsive

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="css/style.css">          
 </head>
 <body>
+    <div class="landscapeWarning">
+        <h1 style="word-wrap:break-word;">This website doesn't support landscape mode. Please rotate your phone.</h1>
+    </div>
     <header>
     <div id="panning">
         <div class="example">
